@@ -1,4 +1,14 @@
 ------------------------------------------------------------------------
+r2062 | gaser | 2022-08-01 09:06:04
+
+Changed paths:
+ M CHANGES.txt
+M  cat_stat_homogeneity.m
+
+
+Added:   Corrected display of meshes for long. designs in 
+         cat_stat_homogeneity.m.
+------------------------------------------------------------------------
 r2061 | gaser | 2022-08-01 00:46:30
 
 Changed paths:
